<resources>
    <string name="app_name">Quit Smoking</string>
    <string name="title_home">Configuration</string>
    <string name="intervalo_em_minutos">Interval in minutes</string>
    <string name="aqui_podes_regular_o_intervalo_de_tempo_em_minutos_por_onde_queres_comecar_a_deixar_de_fumar_n_nso_quando_receberes_a_notifica_ao_e_que_podes_voltar_a_fumar">Here you can adjust the time interval in minutes where you want to start smoking.\n\nOnly when you receive the notification can you smoke again.\n\n Please write Interval time and increase time, it will increase time each day automatically.</string>
    <string name="gravar">Save</string>
    <string name="intervaloguardado">Saved interval.</string>
    <string name="notificacaofumar">Smoke Notification</string>
    <string name="notificacaoparafumar">Notification to smoke.</string>
    <string name="doar">Donate</string>
    <string name="muitoobrigado">Thank You</string>
    <string name="cancelar">Cancel</string>
    <string name="fumar">Smoke</string>
    <string name="japodesirfumar">You can Smoke Now</string>
    <string name="info">Info</string>
    <string name="servicoemexecucao">Service running to stop smoking</string>
    <string name="japassaram">Already passed -></string>
    <string name="minutos">Minutes</string>
    <string name="tempo_decorrido">Show Elapsed Time</string>
    <string name="tempo_a_incrementar">Time to Increment</string>
    <string name="preencheotempoaincrementar">Fill the time to Increment!</string>
    <string name="preencheointervalodetempo">Fill the time Interval!</string>
    <string name="youhavesmoked">You Have smoked</string>
    <string name="today">today!</string>
    <string name="dontsmoke">Don\'t Smoke</string>
    <string name="more1">+1</string>
    <string name="datas">Dates</string>
    <string name="fumados">Smoked</string>
    <string name="nodia">On Day</string>
    <string name="fumaste">you smoked</string>
</resources>
